tests/paczka1/fuzzy1/18796095.err
Error in line 2: QPYfce9q2iR A95_ 40,8
Error in line 5: p87pY A956 59,5
Error in line 7: QPYfce9q2iR A956 171,0
Error in line 8: gleB A775 24,6
Error in line 15: S434 A556 155,3
Error in line 20: p87pY A613 28,3
Error in line 21: p87pY A956 79,7
Error in line 14: QPYfce9q2iR S434 94,2
Error in line 35: x7ev A775 77,6
